# serializer version: 1
# name: test_by_city[failing_klundert]
  dict({
    'air_quality_index': None,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=51.6689355, longitude=4.541659),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'name': 'Klundert, Brabant',
    }),
    'extended_air_quality': dict({
      'humidity': 71.6,
      'nitrogen_dioxide': 1.6,
      'ozone': None,
      'pm10': 4.0,
      'pm25': None,
      'pressure': 1018.0,
      'sulphur_dioxide': None,
      'temperature': 18.1,
    }),
    'station_id': 6337,
  })
# ---
# name: test_by_city[klundert]
  dict({
    'air_quality_index': 4,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=51.6689355, longitude=4.541659),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'name': 'Klundert, Brabant',
    }),
    'extended_air_quality': dict({
      'humidity': 71.6,
      'nitrogen_dioxide': 1.6,
      'ozone': None,
      'pm10': 4.0,
      'pm25': None,
      'pressure': 1018.0,
      'sulphur_dioxide': None,
      'temperature': 18.1,
    }),
    'station_id': 6337,
  })
# ---
# name: test_by_city[maarssen]
  dict({
    'air_quality_index': 29,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=52.20153, longitude=4.987444),
      'external_url': 'https://aqicn.org/city/netherland/breukelen/snelweg',
      'name': 'Snelweg, Breukelen',
    }),
    'extended_air_quality': dict({
      'humidity': 77.5,
      'nitrogen_dioxide': 3.9,
      'ozone': 29.2,
      'pm10': 12.0,
      'pm25': 7.0,
      'pressure': 1008.4,
      'sulphur_dioxide': None,
      'temperature': 16.9,
    }),
    'station_id': 4586,
  })
# ---
# name: test_by_city[utrecht]
  dict({
    'air_quality_index': 29,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=52.101308, longitude=5.128183),
      'external_url': 'https://aqicn.org/city/netherland/utrecht/griftpark',
      'name': 'Griftpark, Utrecht',
    }),
    'extended_air_quality': dict({
      'humidity': 73.2,
      'nitrogen_dioxide': 0.7,
      'ozone': 29.4,
      'pm10': 12.0,
      'pm25': 1.0,
      'pressure': 1008.8,
      'sulphur_dioxide': 0.1,
      'temperature': 17.5,
    }),
    'station_id': 6332,
  })
# ---
# name: test_get_by_coordinates
  dict({
    'air_quality_index': 29,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=52.105031, longitude=5.124464),
      'external_url': 'https://aqicn.org/city/netherland/utrecht/de-jongweg',
      'name': 'de Jongweg, Utrecht',
    }),
    'extended_air_quality': dict({
      'humidity': 80.0,
      'nitrogen_dioxide': 2.3,
      'ozone': 29.4,
      'pm10': 12.0,
      'pm25': 17.0,
      'pressure': 1008.8,
      'sulphur_dioxide': None,
      'temperature': 16.0,
    }),
    'station_id': 4584,
  })
# ---
# name: test_get_by_name[failing_klundert]
  dict({
    'air_quality_index': None,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=51.6689355, longitude=4.541659),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'name': 'Klundert, Brabant',
    }),
    'extended_air_quality': dict({
      'humidity': 71.6,
      'nitrogen_dioxide': 2.0,
      'ozone': None,
      'pm10': 5.0,
      'pm25': None,
      'pressure': 1018.0,
      'sulphur_dioxide': None,
      'temperature': 18.1,
    }),
    'station_id': 6337,
  })
# ---
# name: test_get_by_name[klundert]
  dict({
    'air_quality_index': 5,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=51.6689355, longitude=4.541659),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'name': 'Klundert, Brabant',
    }),
    'extended_air_quality': dict({
      'humidity': 71.6,
      'nitrogen_dioxide': 2.0,
      'ozone': None,
      'pm10': 5.0,
      'pm25': None,
      'pressure': 1018.0,
      'sulphur_dioxide': None,
      'temperature': 18.1,
    }),
    'station_id': 6337,
  })
# ---
# name: test_get_by_station_number[6337]
  dict({
    'air_quality_index': 5,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=51.6689355, longitude=4.541659),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'name': 'Klundert, Brabant',
    }),
    'extended_air_quality': dict({
      'humidity': 71.6,
      'nitrogen_dioxide': 2.0,
      'ozone': None,
      'pm10': 5.0,
      'pm25': None,
      'pressure': 1018.0,
      'sulphur_dioxide': None,
      'temperature': 18.1,
    }),
    'station_id': 6337,
  })
# ---
# name: test_search[failing_klundert]
  list([
    WAQISearchResult(air_quality_index=None, station_id=6337, station=Station(external_url='netherland/brabant/klundert', name='Klundert, Brabant', coordinates=Coordinates(latitude=51.6689355, longitude=4.541659))),
  ])
# ---
# name: test_search[klundert]
  list([
    WAQISearchResult(air_quality_index=4, station_id=6337, station=Station(external_url='netherland/brabant/klundert', name='Klundert, Brabant', coordinates=Coordinates(latitude=51.6689355, longitude=4.541659))),
  ])
# ---
# name: test_search[unknown]
  list([
  ])
# ---
